# course-unreal-engine-the-ultimate-shooter

./: .bazelignore  .braids.json  .clang-format  .gitattributes  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  Shooter.uproject  TODO.md  WORKSPACE.bazel  clean_repository.py  compileblueprint.py  pelor.uproject  ue5_engine.BUILD.bazel  unreal_native_rules.bzl
.run/: pelor.run.xml
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/MasterMaterial/: M_Master.uasset  M_Master_Translucency.uasset
Content/Materials/: MI_Platform_01.uasset  MI_ShowerRoomTileFloorPainted_01.uasset  MI_ShowerWall01.uasset  M_3ColorsMaskBase.uasset  M_ConcretePillar01_Master.uasset  M_ShowerCarpet01.uasset
Content/Meshes/: SM_Platform_02.uasset  SM_ShowerWalll01.uasset
Content/Prototypes/: BPP_LI_Floor.uasset  LI_Floor.umap  ShooterPrototype.umap
Content/Python/: asset_naming_validator.py  conventions.json  delete_empty_folders.py  delete_empty_static_mesh.py  duplicator.py  init_unreal.py  maps_assets_to_remove.txt  organise_assets_into_folders.py  organize_world_outliner.py  power_of_two_validator.py  prefixer.py  produce_clean_script.py  produce_unused_report.py  rename_assets.py  replace_material.py  set_texture_parameters.py  unused.py
Content/Textures/: T_ShowerCarpet01_ID1.uasset  T_ShowerWall01_ID1.uasset
Content/_Game/FX/: M_Fire.uasset  (+6 more)
Plugins/ElectronicNodes/: UpdateConfig.ini
Plugins/ImporterRulesPython/: ImporterRulesPython.uplugin
Plugins/Linter/: Linter.uplugin
Plugins/MaterialMelody/: .gitattributes  MaterialMelody.uplugin
Plugins/RuleRanger/: .gitattributes  RuleRanger.uplugin  TODO.md
Source/: Shooter.Target.cs  ShooterEditor.Target.cs  pelor.Target.cs  pelorEditor.Target.cs
Source/pelor/: Item.cpp  Item.h  PelorGameModeBase.cpp  PelorGameModeBase.h  ShooterAnimInstance.cpp  ShooterAnimInstance.h  ShooterCharacter.cpp  ShooterCharacter.h  Weapon.cpp  Weapon.h  pelor.Build.cs  pelor.cpp
(+9374 files in other folders)
