# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:unreal_native_rules.bzl", "compile_blueprint", "run_commandlet")

compile_blueprint(
  name="Compile_BP_FootstepAnimNotify",
  engine_executable="@unreal_engine//:Engine/Binaries/Win64/UnrealEditor-cmd.exe",
  project_file="//:pelor.uproject",
  blueprint="//:Content/_Game/AnimNotifies/BP_FootstepAnimNotify.uasset",
  unique_identifier="BP_FootstepAnimNotify",
)
