# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Workspace named so that BUILD.bazel files in other workspaces can reference this
# namespace with a fixed name.
workspace(name = "org_realityforge_shooter")

new_local_repository(
    name = "unreal_engine",
    build_file = "@org_realityforge_shooter//:ue5_engine.BUILD.bazel",
    path = "C:\\Program Files\\Epic Games\\UE_5.1\\"
)
